# mrraptorious.github.io

./: .gitignore  404.html  LICENSE  about.html  index.html  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
.devcontainer/: devcontainer.json
_app/: version.json
_app/immutable/assets/: 0.Bzgk0H3W.css  0.DaKubkkR.css  0.Dcp84BNk.css  2.BaoNOLed.css  2.C1sA872z.css  2.DGgDFfSc.css  2.G29kulNN.css  2.NXYI5wF8.css  2.Uddb7m3H.css  2.bxxF7pvT.css  3.CtYW37dh.css  _layout.BRUb-_G8.css  _layout.BeP8BRcP.css  _layout.DMk1WwvJ.css  _page.5YgeBMgc.css  _page.BQcWihzI.css  _page.CV_GC1rC.css  _page.DIKMKtVm.css  _page.DV5w-dz8.css  _page.Dmt9Sub3.css  _page.am82lja_.css  rust_wasm_bg.BgkDTMva.wasm  rust_wasm_bg.CTozoQXM.wasm  rust_wasm_bg.CUZAF8U0.wasm
_app/immutable/chunks/: 9GATGgyM.js  9qzt_GWd.js  B40w59Mn.js  B7MHQbol.js  B8vUEQ8S.js  BAiI8h4J.js  BFuzievk.js  BG34aXDV.js  BI2WvKS1.js  BIm5rYXn.js  BJGqxVoz.js  BMYkHh8Z.js  BXZ8aekY.js  BXcY78xH.js  B_D1S_Ip.js  BdOY5xPE.js  Be5dWuTk.js  Bh_EzxZd.js  BjcL27rt.js  BjkTjwEK.js  Bq1iY8UN.js  BrYyYQyc.js  Bvh56GpI.js  (+58 more)
experiments/: dottify.html  mobility_models.html  spinnable_badge.html  webgl.html
rust-wasm/: Cargo.toml
rust-wasm/src/: lib.rs
rust_wasm/: Cargo.toml
rust_wasm/src/: dottify.rs  lib.rs  random.rs
rust_wasm/src/mobility_sim/: mod.rs  random_direction.rs  random_walk.rs
rust_wasm/src/slime/: mod.rs  slime_wgpu.rs
src/: app.css
src/lib/: meta.json  types.ts  util.ts
src/routes/: +layout.js  +layout.svelte  +page.svelte
sverdle/: how-to-play.html
(+151 files in other folders)
