[package]
name = "rust-wasm"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"] # cdylib ist notwendig für WebAssembly

[dependencies]
console_error_panic_hook = "0.1.7"
image = "0.25.6"
log = "0.4.27"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
wasm-logger = "0.2.0"
web-sys = "0.3.77"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"      
